--- a/src/markdown/english/6. Neurology.md
+++ b/src/markdown/english/6. Neurology.md
@@ -78,3 +78,19 @@ The way I look at it; I am not "improving myself" but I am just practicing life 
 In any case, most people doing "self-improvement" have no idea why they are practicing it. They want to be better. They want to get women. They want to be more confident. However, even though the idea of "self-improvement" is a long-term benefit, the result for these people is still short-term pleasures. Think about your reasons for being interested in "self-improvement" and you can find out many things that will likely bring clarity.
 
 What you call self-discipline - is merely an adjustment to an environment which we have not completely understood; therefore, in that adjustment, there must be the denial of intelligence. Why has one ever to discipline one's self? instead of this avoidance, this conflict, one can understand the nature of what they create a conflict with. And then the mind will become free.
+
+## We Guard Our Problems
+
+Your problems become your companions. They are your pet rocks. You groom them and nurture them and secretly hope that they will never leave you. For they have become part of you. And you need them as beacons to keep you fixed to the same path you have walked for dozens of years.
+
+For if someone truly took away your problems, you would go mad. You would not know how to function. You would be shakened from your conditioned existence. You would roam aimless in the street. Your entire life would fall apart.
+
+With nothing to guide you, with no railroad tracks to follow, the world would explode into a sea of choices and possibilites. What would you do then? How would you choose?
+
+Our problems help us avoid this responsibility for direction. And if we do not confront the endless possibilities that will arise once we find freedom from these problems, and only hide from them, one will be forever attached to their problems.
+
+Once recognised, the problem of PMO becomes a direction to work towards. Once it is overcome, you are lost in your newfound freedom.
+
+This is why it is of upmost importance for one to figure their direction. If you have no use for your freedom, you might as well not attempt to gain it.
+
+Think on these things.
